# kovidore-benchmark

./: README.md  pyproject.toml  setup_data.py
data/cybersecurity/: corpus.csv  qrels.csv  queries.csv
data/economic/: corpus.csv  qrels.csv  queries.csv
data/energy/: corpus.csv  qrels.csv  queries.csv
data/hr/: corpus.csv  qrels.csv  queries.csv
examples/interpertability/: generate_interpretability_maps.py
examples/interpretability/: generate_interpretability_maps.py
kovidore/: __init__.py  evaluate.py  main.py
