[project]
name = "kovidore-benchmark"
version = "1.0.0"
description = "Korean Vision Document Retrieval Benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mteb>=2.7.0",
    "torch>=2.9.0",
    "torchvision>=0.20.0",
    "peft>=0.14.0,<0.17.0",
    "einops>=0.8.1",
    "sentencepiece>=0.2.1",
    "protobuf>=6.32.0",
    "colpali-engine[interpretability]>=0.3.7",
    "open-clip-torch>=3.1.0",
    "datasets>=3.6.0",
    "sentence-transformers>=5.1.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.0.0",
    "flash-attn>=2.8.3",
    "qwen-vl-utils>=0.0.14",
]

[tool.setuptools]
packages = ["kovidore"]

[tool.uv]
package = true

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[project.scripts]
kovidore = "kovidore.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 120
lint.fixable = ["ALL"]
lint.unfixable = ["F401"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
